generated/checkers/refine/KN-Null-Pointer-Dereference-1f886a7b-4/build_logs/syntax-repair-refine-2-1/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::Expr* {anonymous}::SAGenTestChecker::unwrapBooleanWrappers(const clang::Expr*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:159:40: error: ‘BI__builtin_expect’ is not a member of ‘clang::Builtin’
  159 |     if (FD->getBuiltinID() == Builtin::BI__builtin_expect) {
      |                                        ^~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isProvenNonNull(clang::ento::SymbolRef, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:259:76: error: ‘class clang::ento::SValBuilder’ has no member named ‘makeNull’
  259 |   DefinedOrUnknownSVal EqNull = SVB.evalEQ(State, SymSV.castAs<Loc>(), SVB.makeNull());
      |                                                                            ^~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
